@@ -19,6 +19,8 @@ Changes in 2.0.0:
       scans for changed trove info records (CNY-1756)
     * the mirror client supports a --absolute flag which will make it
       use only absolute changesets to mirror content (CNY-1755)
+    * 'cvc shadow' now commits relative changesets when the shadow is
+      made to the same repository as the original trove
 
   o Server Changes:
     * Fixed scoring for target flavor sets (CNY-1539)
